--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
   "name": "change-case-repro",
-  "packageManager": "yarn@4.0.1"
+  "type": "module",
+  "exports": "./change-case-five-oh-1.js",
+  "packageManager": "yarn@4.0.1",
+  "dependencies": {
+    "change-case": "^5.1.2"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.95",
+    "@swc/jest": "^0.2.29",
+    "jest": "^29.7.0",
+    "ts-jest-resolver": "^2.0.1"
+  }
 }
